# kuryuk

./: .editorconfig  .env.sample  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
migrations/2020-05-27-011834_create_transactions/: down.sql  up.sql
src/: main.rs  model.rs  query.rs  response.rs  schema.rs
src/controllers/: mod.rs  transactions.rs
