[package]
name = "kuryuk"
version = "0.1.0"
authors = ["Hernawan Fa'iz Abdillah <hernawan.faiz.abdillah@gmail.com>"]
edition = "2018"

[dependencies]
actix-rt = "1.1.1"
actix-http = "1.0.1"
actix-web = "2.0.0"
bytes = "0.5.4"
tera = "1.3.0"
diesel = { version = "1.4.4", features = [ "sqlite", "chrono" ] }
serde = "1.0.110"
serde_json = "1.0.53"
chrono = "0.4.11"
dotenv = "0.15.0"